--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,67 @@
     transform: rotate(360deg);
   }
 }
+
+.App-game {
+  max-width: 500px;
+  margin: 0 auto;
+}
+
+.App-body {
+  display: flex;
+}
+
+.App-help {
+  color: rgb(255, 255, 255);
+  margin: 10px;
+  text-align: center;
+}
+
+.App-left {
+  text-align: center;
+  width: 50%;
+  border: thin solid #ddd;
+}
+
+.App-right {
+  text-align: center;
+  padding: 10px;
+  width: 50%;
+  border: thin solid #ddd;
+}
+
+.star {
+  display: inline-block;
+  margin: 0 15px;
+}
+
+.star:after {
+  content: "\2605";
+  font-size: 45px;
+}
+
+.number {
+  background-color: #eee;
+  border: thin solid #ddd;
+  width: 45px;
+  height: 45px;
+  margin: 10px;
+  font-size: 25px;
+}
+
+.number:focus, .number:active {
+  outline: none;
+  border: thin solid #ddd;
+}
+
+.App-game-timer {
+	color: rgb(255, 255, 255);
+  margin-top: 3px;
+  margin-left: 3px;
+}
+
+.App-game-over .message {
+  font-size: 250%;
+  font-weight: bold;
+  margin: 15px;
+}
